 -- 0.10 --
* Search results sorting
* Multiple selections in search results
* Removed some diagnostic messages
* Default action in search window is now file download, not list download
* Only one downloading connection per user now

 -- 0.09 2002-01-02 --
* Right-button menu in search window
* Download queue saving
* Fixed a nasty download queue bug
* Added some transfer statistics
* Multiple download sources (Very alpha...)
* Fixed some problems with case insensitivity in filenames

 -- 0.08 2001-12-27 --
* Private messages
* Right-button menues
* OP / Registred user login (with password)
* OP Commands (Kick, redirect)
* Optimized file listing (a lot faster now...should barely notice it unless it's a _very_ large list)
* Optimized shared files compression
* More work towards application stability...although focus is still on functionality...
* More work on the download queue
* Connection saving, i e connections to users are not released until two inactive minutes have passed, giving time to browse the user's 
  files without worrying about slots
* Fixed file size sorting
* Fixed searching a bit, one should now be able to have two concurrent searches going...
* Fixed upload removing (?)

 -- 0.07 2001-12-18 --
* Passive searching (I hope...)
* Reworked the download queue, it should now be a bit more stable...
* Some ui work
* bugfixes as usual...although, now it's starting to become fairly stable...

 -- 0.06 2001-12-13 --
* A lot of UI work, the app should be at least a tiny bit more comfortable to work with
* Automatic reconnections (to hubs and users)
* Yet another slew of bugs killed (hm, where are all those bugs coming from? =)
* Downloading of directories and multiple files at a time
* Default download directory
* Some work on the search window, although searching is far from finished...
* Quicker startup (huffman encoding of the file list is now done in a separate thread)
* Automatic ip detection (if nothing's entered in the settings dialog...)