@@ -4,6 +4,9 @@
 * Removed some diagnostic messages
 * Default action in search window is now file download, not list download
 * Only one downloading connection per user now
+* Removed some download queue bugs
+* Added basic icons that distinguish op's from normal users
+* Right-button menu in the transfer list
 
  -- 0.09 2002-01-02 --
 * Right-button menu in search window
